2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-secure-entry.c: Use the proper GtkEntry style
    Fixes #351839
    
2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-service-source.c: Fix some critical warnings
    when filling in the 'Add Key Server' dialog.
    * libseahorse/seahorse-keyserver-control.c: Make appropriate selection 
    after deleting a key server, that was selected for publishing.
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-keyserver-results.c:
    * libseahorse/seahorse-keyserver-sync.c: When transferring keys to a key
    server transfer them individually, as that's more compatible with older
    key servers.
    
2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-widget.c: Less crashes when glade files
    not installed properly.
    
2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-generate.glade: HIG fix

2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * bonobo/Makefile.am:
    * daemon/Makefile.am:
    * libseahorse/Makefile.am:
    * plugins/applet/Makefile.am:
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus-ext/Makefile.am:
    * src/Makefile.am: Turn libseahorse back into a static 
    library now that we don't have shared libraries depending on it. 
    Simplifies build process and interdependencies.

2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-passphrase.h:
    * src/Makefile.am:
    * src/seahorse-generate-adv.c (removed):
    * src/seahorse-generate-adv.glade (removed):
    * src/seahorse-generate-adv.h (removed):
    * src/seahorse-generate-druid.c (removed):
    * src/seahorse-generate-druid.glade (removed):
    * src/seahorse-generate-druid.h (removed):
    * src/seahorse-generate-select.c: