@@ -140,8 +140,6 @@ seahorse_key_widget_finalize (GObject *gobject)
     g_signal_handlers_disconnect_by_func (GTK_OBJECT (skwidget->skey),
                                           seahorse_key_widget_destroyed, skwidget);
     
-    g_object_unref (skwidget->skey);
-    
     G_OBJECT_CLASS (parent_class)->finalize (gobject);
 }
 
@@ -159,7 +157,6 @@ seahorse_key_widget_set_property (GObject *object, guint prop_id,
 		/* Refs key and connects to 'destroy' signal */
 		case PROP_KEY:
 			skwidget->skey = g_value_get_object (value);
-			g_object_ref (skwidget->skey);
 			g_signal_connect_after (GTK_OBJECT (skwidget->skey), "destroy",
 				G_CALLBACK (seahorse_key_widget_destroyed), skwidget);
 			break;
