@@ -1,3 +1,11 @@
+2006-08-19  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-key-widget.c: Don't keep key windows open when key is gone.
+    * libseahorse/seahorse-widget.c: 
+    * libseahorse/seahorse-widget.h: Don't destroy windows twice.
+    * libseahorse/seahorse-ssh-source.c: Don't needlessly create new keys. 
+    * libseahorse/seahorse-context.c: Better handling when keys go away
+    
 2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-secure-entry.c: Use the proper GtkEntry style
